cabal-version: 3.0
name: oai
version: 0.1.0.0
license: MIT
license-file: LICENSE

author: jrvieira
maintainer: github@jrvieira.com

build-type: Simple

common warnings
   ghc-options: -Wall

executable oai
   import: warnings
   main-is: Main.hs
   hs-source-dirs: app

   ghc-options: -O2 -threaded -rtsopts -Wall

   build-depends: base >= 4.18.0 && < 4.19
      , Zero
      , directory >= 1.3.8 && < 1.4
      , process >= 1.6.17 && < 1.7
      , aeson >= 2.1.2 && < 2.2
      , utf8-string >= 1.0.2 && < 1.1
      , text >= 2.0.2 && < 2.1
      , dlist >= 1.0 && < 1.1
      , time >= 1.12.2 && < 1.13
      , readline >= 1.0.3 && < 1.1

   other-modules: Oai.Transit

   default-language: GHC2021
   default-extensions: DuplicateRecordFields
